Fixed scrollbar bug

--- a/src/app/views/components/component-view/component-view.component.scss
+++ b/src/app/views/components/component-view/component-view.component.scss
@@ -2,7 +2,6 @@
 {
     margin-left: 10%;
     margin-right: 10%;
-    
     font-size: 15px !important;
     
     ::-webkit-scrollbar
@@ -33,10 +32,6 @@
     {
         margin-bottom: 20px;
         min-height: 100px;
-    }
-    .markdown_container
-    {
-    
     }
     .code_container
     {
