--- a/src/app/views/icons/icon-template.component.scss
+++ b/src/app/views/icons/icon-template.component.scss
@@ -4,7 +4,7 @@
 }
 .icon-view
 {
-    width: 100%;
+    height:100vh;
     overflow-y: scroll;
     margin-right: 260px;
 }
