--- a/src/app/views/icons/iconview/icon-view.component.scss
+++ b/src/app/views/icons/iconview/icon-view.component.scss
@@ -3,18 +3,11 @@
     font-family: 'Roboto', sans-serif !important;
     margin-left: 10%;
     margin-right: 10%;
-    width: 50%;
-    display: grid;
-    padding: 20px 0 0 0;
-    margin-top:60px;
-    .icon-portlet
-    {
-        width: 40%;
-        
-    }
+    padding: 50px 0 0 0;
     .icon-list
     {
         padding: 0;
+        margin-bottom: 20px;
         li
         {
             font-size: 20px;
@@ -25,7 +18,6 @@
             font-family: 'Roboto', sans-serif !important;
             font-size: 20px;
         }
-        margin-bottom: 20px;
     }
     .icon-description-container
     {
@@ -74,18 +66,16 @@
 .suggestion-box-container
 {
     padding: 10px 10px 10px 10px;
-    width: 50%;
-    margin-left: 10px;
     margin-right: auto;
     
 }
 
 .search-bar
 {
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 1;
-    width: 50%;
+    width: 100%;
     height: 60px;
     background-color: #f3f3f3;
     margin-top:50px;
